<resources>
    <string name="app_name">my_health</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty">Add new reminder</string>
    <string name="newremind">Nova uputnica</string>
    <string name="enterTitle">Unesi naziv</string>
    <string name="enterDescription">Unesi opis</string>
    <string name="addReminder">Dodaj</string>
    <string name="editTitle">Uredi</string>
    <string name="saveChanges">Spremi</string>
    <string name="odaberi_datum">Odaberi datum</string>
    <string name="odaberi_vrijeme">Odaberi vrijeme</string>
    <string name="reminder_notification_channel_id" translatable="false">reminder_channel</string>
    <string name="reminder_notification_channel_name" translatable="true">Reminder</string>
    <string name="reminder_notification_channel_description">User reminder</string>
</resources>